--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#about-us" class="link">About Us</a></li>
             <li><a href="#features" class="link">Features</a></li>
             <li><a href="#products" class="link">Products</a></li>
-            <li><a href="login/login.html"><button type="submit" class="login-btn">Login</button></a></li>
+            <li><a href="login.html"><button type="submit" class="login-btn">Login</button></a></li>
         </ul>
     </nav>
 
